# ELEC5660_lab_code

./: .gitignore  README.md
src/TOOL_ROS/: README.md
src/TOOL_ROS/code_utils/: CMakeLists.txt
src/TOOL_ROS/machine_defined/: CMakeLists.txt  README.md  package.xml
src/TOOL_ROS/machine_defined/launch/: ctrl_md.launch
src/TOOL_ROS/mocap_optitrack/src/: mocap_datapackets.cpp
src/TOOL_ROS/n1ctrl/: .gitignore  CMakeLists.txt  README.md  package.xml
src/TOOL_ROS/n1ctrl/config/: ctrl_param_sim.yaml  simulation.rviz  simulation.yaml
src/TOOL_ROS/n1ctrl/docs/: fsm_graph.py
src/TOOL_ROS/n1ctrl/launch/: ctrl.launch  djisim.launch  djisim_odom.launch  djisim_vo.launch  joy.launch  simulation.launch
src/TOOL_ROS/n1ctrl/script/: n1_sim_helper.py  n1_sim_vo.py
src/TOOL_ROS/n1ctrl/src/: N1CtrlFSM.cpp  N1CtrlFSM.h  N1CtrlFSM_control.cpp  N1CtrlFSM_state.cpp  N1CtrlParam.cpp  N1CtrlParam.h  controller.cpp  controller.h  hovthrkf.cpp  input.cpp  input.h  n1ctrl_node.cpp
src/TOOL_ROS/pose_utils/: CMakeLists.txt  mainpage.dox
src/TOOL_ROS/pose_utils/src/: pose_utils.cpp
src/TOOL_ROS/quadrotor_msgs/: CMakeLists.txt
src/TOOL_ROS/uav_utils/: CMakeLists.txt  package.xml
src/TOOL_ROS/uav_utils/include/uav_utils/: utils.h
src/app/demo_application/: .visualization_autorun.sh.swp  bag_autorun.sh  bag_recorder.sh  bashrc.sh  camera_vins.sh  chicken_blood.sh  hover.sh  hover.sh~  mapping_autorun.sh  planning_autorun.sh  shutdown_all.sh  visualization_autorun.sh
src/app/demo_application/apps/: bag_autorun.desktop  bag_recorder.desktop  camera_vins.desktop  chicken_blood.desktop  hover.desktop.desktop  mapping_autorun.desktop  planning_autorun.desktop  shutdown.desktop  visualization.desktop
src/bluefox2/: CMakeLists.txt  install_mvBlueFOX.sh
src/bluefox2/cmake/: FindmvIMPACT.cmake
src/bluefox2/driver_install/: install_mvBlueFOX.sh
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/: Build.info  Makefile  README.mvBlueFOX
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/DriverBase/Include/: mvCustomCommandDataTypes.h  mvDriverBaseEnums.h  mvVersionInfo.h
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/Scripts/: matrixvision.usermap  matrixvision_config
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/: Makefile  Makefile.samp.inc  mknewappl.sh  mvDebugFlags.mvd
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/Callback/: Callback.cpp  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/Callback_C/: Callback.c  Makefile  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/CaptureToUserMemory/: CaptureToUserMemory.cpp  Makefile  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/CaptureToUserMemory_C/: CaptureToUserMemory.c  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/Common/: Info.h  exampleHelper.h  exampleHelper_C.c  exampleHelper_C.h  wxAbstraction.h
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/ContinuousCaptureAllDevices/: ContinuousCaptureAllDevicesLIN.cpp  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/ContinuousCaptureGenICam_C/: ContinuousCaptureGenICam.c  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/ContinuousCapture_C/: ContinuousCapture.c  Makefile  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/DigitalIOs/: DigitalIOs.cpp  Makefile  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/FirmwareUpgrade/: FirmwareUpgrade.cpp  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/GenICamInterfaceLayout/: GenICamInterfaceLayout.cpp  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/GenICamSequencerParameterChangeAtRuntime/: GenICamSequencerParameterChangeAtRuntime.cpp  Makefile  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/GenICamSequencerUsage/: GenICamSequencerUsage.cpp  Makefile  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/GenICamSmartFrameRecallUsage/: GenICamSmartFrameRecallUsage.cpp  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/GenericInterfaceLayout/: GenericInterfaceLayout.cpp  Makefile  Makefile.inc
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/apps/LiveSnap/: .cproject  .project  (+2 more)
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/common/: PGMFileFunctions.cpp  PGMFileFunctions.h  STLHelper.h  function_cast.h  minmax.h
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/libusb/: README.libusb
src/bluefox2/driver_install/mvIMPACT_acquire-x86_64-2.18.3/mvIMPACT_CPP/: mvIMPACT_acquire.h  mvIMPACT_acquire_GenICam.h  mvIMPACT_acquire_GenICam_CustomCommands.h  mvIMPACT_acquire_GenICam_FileStream.h  versionInfo.txt
src/bluefox2/install/: install.bash
src/bluefox2/install/mvimpact_acquire/: README.md
src/bluefox2/install/mvimpact_acquire/armv7l/: install_mvBlueFOX_arm.sh
src/bluefox2/install/mvimpact_acquire/x86-64/: install_mvBlueFOX.sh
src/calib_image_saver/: CMakeLists.txt
src/calib_image_saver/launch/: single_collect_image.launch
src/calib_image_saver/src/: singleImageSaver.cc  stereoImageSaver.cc
src/camera_driver/amd64/: install_mvBlueFOX.sh
src/camera_driver/arm64/: install_mvBlueFOX_ARM.sh
src/djiros/: CMakeLists.txt
src/djiros/launch/: djiros.launch
src/machine_defined/config/: ctrl_param_px3.yaml  ctrl_param_sim.yaml  ctrl_param_uav2.yaml  odom_assist_for_sim.yaml  sim.rviz  simulator_param.yaml
src/mocap_optitrack/config/: mocap.yaml  mocap.yaml~
src/mocap_optitrack/launch/: mocap.launch  mocap.launch~
src/opencv/: refer
src/pos_vel_mocap/: CMakeLists.txt  package.xml
src/pos_vel_mocap/launch/: pos_vel_mocap.launch 
src/pos_vel_mocap/src/: pos_vel_mocap.cpp
src/trajectory_node/: CMakeLists.txt  package.xml
src/trajectory_node/include/: rotation.h
src/trajectory_node/src/: trajectory.h  trajectory_node.cpp
(+133 files in other folders)
